--- a/tool-framework/app/globals.css
+++ b/tool-framework/app/globals.css
@@ -3,25 +3,670 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --foreground-rgb: 0, 0, 0;
+  --background-start-rgb: 214, 219, 220;
+  --background-end-rgb: 255, 255, 255;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --foreground-rgb: 255, 255, 255;
+    --background-start-rgb: 0, 0, 0;
+    --background-end-rgb: 0, 0, 0;
   }
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  color: rgb(var(--foreground-rgb));
+  background: linear-gradient(
+      to bottom,
+      transparent,
+      rgb(var(--background-end-rgb))
+    )
+    rgb(var(--background-start-rgb));
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+#__next {
+  height: 100%;
+  box-sizing: border-box;
+}
+
+input::-webkit-search-cancel-button,
+input::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+body {
+  color: #212529;
+}
+
+.left-none {
+  left: 0 !important;
+}
+
+/* Scrollbar design */
+::-webkit-scrollbar {
+  width: 0;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #999999;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+/* Swiper styles START */
+:root {
+  --swiper-theme-color: "#00000080" !important;
+  --swiper-navigation-size: 20px !important;
+}
+
+.swiper {
+  position: initial;
+}
+
+.swiper-scrollbar-horizontal,
+.swiper-pagination {
+  bottom: -40px !important;
+}
+
+.swiper-pagination-bullet {
+  opacity: 1;
+  width: 10px;
+  height: 10px;
+}
+
+.theme-light .swiper-pagination-bullet {
+  background: #e1e1e1;
+  border-color: #343434;
+}
+
+.theme-light .swiper-pagination-bullet-active {
+  background: #78cc6d;
+}
+
+.theme-dark .swiper-pagination-bullet {
+  background: rgba(255, 255, 255, 0.2);
+}
+
+.theme-dark .swiper-pagination-bullet-active {
+  background: #ffffff;
+}
+/* Swiper styles END */
+
+/* Overrider antd design START*/
+.ant-btn-primary {
+  background-color: #4096ff !important;
+}
+
+.ant-table-container {
+  overflow-y: auto;
+}
+
+.ant-tabs-tab-btn {
+  font-size: 15px;
+  font-weight: 500;
+}
+
+.ant-tabs-left .ant-tabs-tab {
+  padding: 8px 24px 8px 5px !important;
+}
+
+.ant-table {
+  overflow-y: auto;
+}
+
+.ant-select-selector {
+  border: none !important;
+  box-shadow: none !important;
+}
+
+/* ANTD Menu START */
+.ant-menu-item-selected {
+  color: black !important;
+  background-color: white !important;
+}
+
+.ant-menu-sub .ant-menu-item {
+  background-color: transparent !important;
+}
+
+.ant-menu-root > .ant-menu-item,
+.ant-menu-root > .ant-menu-submenu > .ant-menu-submenu-title {
+  height: 50px !important;
+  line-height: 50px !important;
+  border-radius: initial;
+}
+
+.ant-menu-sub .ant-menu-item {
+  border-radius: initial;
+}
+
+.ant-menu-root > .ant-menu-item .ant-menu-title-content,
+.ant-menu-root
+  > .ant-menu-submenu
+  .ant-menu-submenu-title
+  .ant-menu-title-content {
+  font-size: 16px !important;
+  padding-left: 6px !important;
+  font-weight: 500 !important;
+  padding-bottom: 2px !important;
+  color: black !important;
+}
+
+.ant-menu-root .ant-menu-submenu-arrow,
+.ant-menu-root .ant-menu-item-icon {
+  color: black !important;
+}
+
+.ant-menu-sub > .ant-menu-title-content {
+  padding-left: 15px;
+}
+
+/* ANTD Menu END */
+
+@media only screen and (max-width: 768px) {
+  .ant-table-content > table {
+    table-layout: fixed !important;
+  }
+}
+/* Overrider antd design END*/
+
+.splitBar:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 1.5px;
+  background: radial-gradient(
+    ellipse at left,
+    rgba(197, 202, 213, 0.7) 0%,
+    rgba(255, 255, 255, 0) 70%
+  );
+}
+
+.center-gradiant:after {
+  background: radial-gradient(
+    ellipse at center,
+    #dddddd 0%,
+    rgba(255, 255, 255, 0) 70%
+  );
+}
+
+.top-gradiant:after {
+  background: radial-gradient(
+    ellipse at top,
+    #dddddd 0%,
+    rgba(255, 255, 255, 0) 70%
+  );
+}
+
+.right-gradiant-after:after {
+  background: radial-gradient(
+    ellipse at right,
+    #dddddd 0%,
+    rgba(255, 255, 255, 0) 70%
+  );
+}
+
+.right-gradiant-before:before {
+  background: radial-gradient(
+    ellipse at right,
+    #dddddd 0%,
+    rgba(255, 255, 255, 0) 70%
+  );
+}
+
+/* Text animation START */
+.text-animate {
+  display: inline-block;
+  opacity: 0;
+  animation: bounceIn;
+  animation-duration: 1s;
+  animation-delay: 1s;
+  animation-fill-mode: forwards;
+  min-width: 10px;
+  letter-spacing: 3px;
+}
+
+.text-animate:hover {
+  opacity: 1 !important;
+}
+
+.text-animate-hover {
+  min-width: 10px;
+  display: inline-block;
+  animation-fill-mode: both;
+  transition: all 0.3s ease-out;
+  letter-spacing: 3px;
+}
+
+.text-animate-hover:hover {
+  animation: rubberBand 1s;
+  color: #78cc6d;
+}
+
+.text-animate._15 {
+  animation-delay: 0.1s;
+}
+.text-animate._16 {
+  animation-delay: 0.2s;
+}
+.text-animate._17 {
+  animation-delay: 0.3s;
+}
+.text-animate._18 {
+  animation-delay: 0.4s;
+}
+.text-animate._19 {
+  animation-delay: 0.5s;
+}
+.text-animate._20 {
+  animation-delay: 0.6s;
+}
+.text-animate._21 {
+  animation-delay: 0.7s;
+}
+.text-animate._22 {
+  animation-delay: 0.8s;
+}
+.text-animate._23 {
+  animation-delay: 0.9s;
+}
+.text-animate._24 {
+  animation-delay: 1s;
+}
+.text-animate._25 {
+  animation-delay: 1.1s;
+}
+.text-animate._26 {
+  animation-delay: 1.2s;
+}
+.text-animate._27 {
+  animation-delay: 1.3s;
+}
+.text-animate._28 {
+  animation-delay: 1.4s;
+}
+.text-animate._29 {
+  animation-delay: 1.5s;
+}
+.text-animate._30 {
+  animation-delay: 1.6s;
+}
+.text-animate._31 {
+  animation-delay: 1.7s;
+}
+.text-animate._31 {
+  animation-delay: 1.8s;
+}
+.text-animate._33 {
+  animation-delay: 1.9s;
+}
+.text-animate._34 {
+  animation-delay: 2s;
+}
+.text-animate._35 {
+  animation-delay: 2.1s;
+}
+
+.rubberBand {
+  animation: rubberBand 1s;
+}
+
+@keyframes bounceIn {
+  0%,
+  100%,
+  20%,
+  40%,
+  60%,
+  80% {
+    transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
+  0% {
+    opacity: 0;
+    transform: scale3d(0.3, 0.3, 0.3);
+  }
+  20% {
+    transform: scale3d(1.1, 1.1, 1.1);
+  }
+  40% {
+    transform: scale3d(0.9, 0.9, 0.9);
+  }
+  60% {
+    opacity: 1;
+    transform: scale3d(1.03, 1.03, 1.03);
+  }
+  80% {
+    transform: scale3d(0.97, 0.97, 0.97);
+  }
+  100% {
+    opacity: 1;
+    transform: scale3d(1, 1, 1);
+  }
+}
+
+.bounceIn {
+  animation-name: bounceIn;
+  animation-duration: 0.75s;
+}
+
+@keyframes rubberBand {
+  0% {
+    transform: scale3d(1, 1, 1);
+  }
+  30% {
+    transform: scale3d(1.25, 0.75, 1);
+  }
+  40% {
+    transform: scale3d(0.75, 1.25, 1);
+  }
+  50% {
+    transform: scale3d(1.15, 0.85, 1);
+  }
+  65% {
+    transform: scale3d(0.95, 1.05, 1);
+  }
+  75% {
+    transform: scale3d(1.05, 0.95, 1);
+  }
+  100% {
+    transform: scale3d(1, 1, 1);
+  }
+}
+/* Text animation END */
+
+/* Background animation wave effect START */
+.animate-wave {
+  animation: wave 15s infinite linear;
+}
+
+@keyframes wave {
+  from {
+    transform: rotate(0deg);
+  }
+  from {
+    transform: rotate(360deg);
+  }
+}
+
+/* Background animation wave effect END */
+
+/* Progress-bar animation START */
+.animate-progress {
+  animation: progress 2.5s linear forwards;
+}
+
+@keyframes progress {
+  0% {
+    stroke-dasharray: 0 100;
+  }
+}
+
+.text-anchor-middle {
+  text-anchor: middle;
+}
+
+.stroke-linecap-round {
+  stroke-linecap: round;
+}
+
+.strokeGradientColor {
+  stroke: url(#GradientColor);
+}
+
+.animate-line {
+  animation: line 2.5s linear forwards;
+}
+
+@keyframes line {
+  0% {
+    width: 0;
+  }
+}
+
+@keyframes progressActive {
+  0% {
+    transform: translate(-100%) scaleX(0);
+    opacity: 0.1;
+  }
+  20% {
+    transform: translate(-100%) scaleX(0);
+    opacity: 0.5;
+  }
+  to {
+    transform: translate(0) scaleX(1);
+    opacity: 0;
+  }
+}
+
+.inset-0 {
+  inset: 0;
+}
+
+/* Progress-bar animation END */
+
+/* Preloader animation STATE */
+.preloader-animation {
+  animation-duration: 1s;
+  animation-fill-mode: both;
+}
+
+.animate-fadeOut {
+  animation-name: fadeOut;
+}
+
+.animate-preloader-bounde1 {
+  animation: sk-bounce 1.5s infinite ease-in-out;
+}
+
+.animate-preloader-bounde2 {
+  animation-delay: -0.75s;
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
+@keyframes sk-bounce {
+  0%,
+  100% {
+    transform: scale(0);
+  }
+  50% {
+    transform: scale(1);
+  }
+}
+/* Preloader animation END */
+
+/* Porfoli layout one pageContentWrapper animation START */
+.fadeInLeft {
+  animation-name: fadeInLeft;
+}
+
+.fadeOutLeft {
+  animation-name: fadeOutLeft;
+}
+
+@keyframes fadeInLeft {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(-70%, 0, 0);
+    transform: translate3d(-70%, 0, 0);
+  }
+
+  to {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+@keyframes fadeOutLeft {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+    -webkit-transform: translate3d(-70%, 0, 0);
+    transform: translate3d(-70%, 0, 0);
+  }
+}
+
+.pageContentWrapper-animate {
+  transition: visibility 1s linear, opacity 0s linear;
+  animation-duration: 1s;
+  animation-fill-mode: both;
+}
+/* Porfoli layout one pageContentWrapper animation END */
+
+.next_image_error {
+  filter: none;
+  background-image: url("/images/placeHolder.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: #e7e7e738;
+}
+
+.ant-carousel .slick-dots li button {
+  background-color: white;
+  border-radius: 0%;
+  display: flex;
+  flex-direction: column;
+  color: white;
+}
+
+.ant-carousel .slick-dots li.slick-active button {
+  background-color: red;
+  padding-top: 10px;
+  border-radius: 0%;
+}
+
+.ant-carousel .slick-arrow {
+  color: white;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.ant-dropdown-menu-submenu-arrow {
+  top: 3px;
+}
+
+.ant-dropdown-menu-submenu .child:not(:last-child) {
+  margin-bottom: 1rem;
+}
+
+.light-shadow {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+}
+
+.large-shadow {
+  width: 1.5px;
+  background-color: #efefef;
+  box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.2);
+  height: 100%;
+}
+
+.backgroundColor {
+  background: linear-gradient(
+    103.35deg,
+    rgb(255, 255, 255) 63.76%,
+    rgb(237, 234, 255) 98.71%
+  );
+}
+
+.anticon-close-circle,
+.anticon-calendar {
+  display: none;
+}
+
+.ant-picker-input {
+  width: 30% !important ;
+}
+
+.ant-picker {
+  display: flex;
+  justify-content: flex-end;
+  border: none;
+  box-shadow: none !important;
+}
+
+.outer-shadow {
+  box-shadow: -5px 0px 10px -3px rgba(0, 0, 0, 0.2),
+    5px 0px 10px -3px rgba(0, 0, 0, 0.2);
+}
+
+.box-gradient {
+  background: linear-gradient(to bottom, #f7f7f7, #e0e0e0);
+}
+
+.anticon-close-circle,
+.anticon-calendar {
+  display: none;
+}
+
+.timePicker .ant-picker-input input {
+  width: 500px !important ;
+  font-size: 14px !important;
+}
+
+.ant-picker-input {
+  width: 40% !important;
+}
+
+.rangePicker .ant-picker-input {
+  width: 100% !important ;
+}
+
+.zoomPicker .ant-picker-input input {
+  width: 100% !important ;
+  font-size: 13px;
+  font-weight: bold;
+}
+
+.rangePicker .ant-picker-input input {
+  font-size: 12px;
+}
+
+.timePicker .ant-picker {
+  display: flex;
+  justify-content: flex-start;
+  border: none;
+  box-shadow: none !important;
+  padding: 0px;
+}
+.ant-picker {
+  display: flex;
+  justify-content: flex-start;
+  border: none;
+  box-shadow: none !important;
+  width: 100%;
+  padding: 0px;
+  padding-left: 5px;
 }
