--- a/tool-framework/app/components/styles.css
+++ b/tool-framework/app/components/styles.css
@@ -31,9 +31,14 @@ body {
     text-wrap: balance;
   }
 }
+.boxShadow {
+  box-shadow: 0px 5px 6px -3px rgba(0, 0, 0, 0.2),
+    0px 9px 12px 1px rgba(0, 0, 0, 0.14), 0px 3px 16px 2px rgba(0, 0, 0, 0.12);
+  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+}
 .main {
   /* background-color: rgb(255, 255, 255); */
-  background-color: rgba(255, 255, 255, 0.705);
+  background-color: #fff;
   font-family: "poppins", sans-serif;
   font-display: var(--font-poppins);
   color: rgb(31, 35, 40);
@@ -44,10 +49,10 @@ body {
 }
 .navigation {
   background-color: rgba(255, 255, 255, 0.822);
-  box-shadow: 0px 0px 10px 10px rgb(243, 243, 243);
+  /* box-shadow: 0px 0px 10px 10px rgb(243, 243, 243); */
 }
 .contentBg {
-  background-color: rgba(255, 255, 255, 0.822);
+  background-color: transparent;
   box-shadow: 0px 0px 10px 10px rgb(243, 243, 243);
 }
 .blocks {
