--- a/tool-framework/app/components/styles.css
+++ b/tool-framework/app/components/styles.css
@@ -48,7 +48,13 @@ body {
   background-color: rgba(255, 255, 255, 0.822);
 }
 .navigation {
-  background-color: rgba(255, 255, 255, 0.822);
+  height: 100%;
+
+  background: linear-gradient(
+    to top,
+    rgba(230, 229, 229, 0.87),
+    rgba(255, 255, 255, 0.986)
+  );
   /* box-shadow: 0px 0px 10px 10px rgb(243, 243, 243); */
 }
 .contentBg {
@@ -72,7 +78,7 @@ Link {
   width: inherit;
   height: inherit;
 }
-ul {
+#navigationId {
   display: flex;
   flex-direction: column;
   justify-content: center;
